--- a/5/style/style.scss
+++ b/5/style/style.scss
@@ -24,7 +24,7 @@ section {
             height: auto;
             font-size: 22px;
             font-weight: 600;
-            .vw_list {
+            .bw_list {
                 ul {
                     display: flex;
                     list-style: none;
